--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,90 +6,93 @@
  * Version: 1.0
  * URL: http://blacktie.co
  */
- 
+
 /* FONTS */
-@import url('http://fonts.googleapis.com/css?family=Roboto:300,400,700,900');
+@import url("http://fonts.googleapis.com/css?family=Roboto:300,400,700,900");
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap'); */
-@import url('http://fonts.googleapis.com/css?family=Raleway:400,300,700,900');
+@import url("http://fonts.googleapis.com/css?family=Raleway:400,300,700,900");
 
 /* OVERALL ASPECT */
-*{
-    margin:0;
-    padding: 0;
-    border: 0;
-    outline: none;
-    box-sizing: border-box;
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: none;
+	box-sizing: border-box;
 }
 
 body {
-  background-color: #f2f2f2;
-    font-family: "lato", sans-serif;
-    font-weight: 300;
-    font-size: 16px;
-    color: #333;
+	background-color: #f2f2f2;
+	font-family: "lato", sans-serif;
+	font-weight: 300;
+	font-size: 16px;
+	color: #333;
 
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
-    
-    margin-top: 70px;
+	-webkit-font-smoothing: antialiased;
+	-webkit-overflow-scrolling: touch;
+
+	margin-top: 70px;
 }
 
 /* Titles */
-h1, h2, h3, h4, h5, h6 {
-    font-family: "Raleway";
-    font-weight: 300;
-    color: #333;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: "Raleway";
+	font-weight: 300;
+	color: #333;
 }
-
 
 /* Paragraph & Typographic */
 p {
-    line-height: 28px;
-    margin-bottom: 25px;
+	line-height: 28px;
+	margin-bottom: 25px;
 }
 
 .centered {
-    text-align: center;
+	text-align: center;
 }
 
 /* Links */
 a {
-    /* color: #f85c37; */
-    color: #006D28;
-    word-wrap: break-word;
+	/* color: #f85c37; */
+	color: #006d28;
+	word-wrap: break-word;
 
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+	-webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+	-moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+	-ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+	-o-transition: color 0.1s ease-in, background 0.1s ease-in;
+	transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
 a:hover,
 a:focus {
-    color: #7b7b7b;
-    text-decoration: none;
-    outline: 0;
+	color: #7b7b7b;
+	text-decoration: none;
+	outline: 0;
 }
 
 a:before,
 a:after {
-    -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -moz-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -ms-transition: color 0.1s ease-in, background 0.1s ease-in;
-    -o-transition: color 0.1s ease-in, background 0.1s ease-in;
-    transition: color 0.1s ease-in, background 0.1s ease-in;
+	-webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
+	-moz-transition: color 0.1s ease-in, background 0.1s ease-in;
+	-ms-transition: color 0.1s ease-in, background 0.1s ease-in;
+	-o-transition: color 0.1s ease-in, background 0.1s ease-in;
+	transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
- hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
+hr {
+	display: block;
+	height: 1px;
+	border: 0;
+	border-top: 1px solid #ccc;
+	margin: 1em 0;
+	padding: 0;
 }
-
 
 .navbar {
 	font-weight: 800;
@@ -107,15 +110,15 @@ a:after {
 
 .navbar-inverse .navbar-nav > .active > a {
 	/* background: #006D28; */
-	background: #006D28;
+	background: #006d28;
 	/* background: rgb(238, 195, 86); */
-    color: #fff;
+	color: #fff;
 }
 
-.navbar-inverse .navbar-nav > li:not(.active) > a:hover{
-    /* background-color: rgb(248, 240, 213); */
-    background-color: rgb(213, 248, 219);
-	color: #006D28;
+.navbar-inverse .navbar-nav > li:not(.active) > a:hover {
+	/* background-color: rgb(248, 240, 213); */
+	background-color: rgb(213, 248, 219);
+	color: #006d28;
 }
 
 .navbar-inverse .navbar-brand {
@@ -125,23 +128,21 @@ a:after {
 	letter-spacing: 1px;
 }
 
-
-
 /*TILT*/
 .tilt {
-  -webkit-transition: all 0.5s ease;
-     -moz-transition: all 0.5s ease;
-       -o-transition: all 0.5s ease;
-      -ms-transition: all 0.5s ease;
-          transition: all 0.5s ease;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
- 
+
 .tilt:hover {
-  -webkit-transform: rotate(-10deg);
-     -moz-transform: rotate(-10deg);
-       -o-transform: rotate(-10deg);
-      -ms-transform: rotate(-10deg);
-          transform: rotate(-10deg);
+	-webkit-transform: rotate(-10deg);
+	-moz-transform: rotate(-10deg);
+	-o-transform: rotate(-10deg);
+	-ms-transform: rotate(-10deg);
+	transform: rotate(-10deg);
 }
 
 /* ==========================================================================
@@ -151,35 +152,34 @@ a:after {
 #headerwrap {
 	background: url(../img/header.png) no-repeat center top;
 	margin-top: -10px;
-	padding-top:40px;
-	text-align:left;
+	padding-top: 40px;
+	text-align: left;
 	background-attachment: relative;
 	background-position: center center;
 	min-height: 500px;
 	width: 100%;
-    position: relative;
-	
-    -webkit-background-size: 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: 100%;
+	position: relative;
 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+	-webkit-background-size: 100%;
+	-moz-background-size: 100%;
+	-o-background-size: 100%;
+	background-size: 100%;
+
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
 
-#headerwrap .overlay{
-    position: absolute;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background: #17a16c;
-    mix-blend-mode: overlay;
+#headerwrap .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #17a16c;
+	mix-blend-mode: overlay;
 }
-
 
 #headerwrap h1 {
 	margin-top: 100px;
@@ -187,13 +187,13 @@ a:after {
 	font-size: 60px;
 	font-weight: 300;
 	letter-spacing: 3px;
-    text-shadow: 1px 2px 4px rgba(0,0,0,0.9);
+	text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.9);
 }
 
-@media screen and (max-width: 768px){
-    #headerwrap h1{
-        margin-top: 60px;
-    }
+@media screen and (max-width: 768px) {
+	#headerwrap h1 {
+		margin-top: 60px;
+	}
 }
 
 #headerwrap h2 {
@@ -210,7 +210,7 @@ a:after {
 	font-weight: 400;
 	letter-spacing: 2px;
 	text-transform: uppercase;
-    text-shadow: 1px 2px 2px rgba(0,0,0,0.9);
+	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.9);
 }
 
 /* Dark Grey Wrap */
@@ -237,10 +237,9 @@ a:after {
 	font-weight: 700;
 }
 
-
 /* Red Wrap */
 #r {
-	background: #006D28;
+	background: #006d28;
 	padding-top: 35px;
 	padding-bottom: 35px;
 }
@@ -271,8 +270,6 @@ a:after {
 	color: white;
 }
 
-
-
 /* Footer Wrap */
 #f {
 	background: #2d2d2d;
@@ -287,7 +284,7 @@ a:after {
 }
 
 #f i:hover {
-	color: #006D28;
+	color: #006d28;
 }
 
 /****** SECTIONS *****/
@@ -301,10 +298,9 @@ a:after {
 }
 
 .w i {
-	color: #006D28;
+	color: #006d28;
 	font-size: 30px;
 }
-
 
 .wb {
 	padding-top: 35px;
@@ -324,7 +320,7 @@ a:after {
 }
 
 .desc i {
-	color: #006D28;
+	color: #006d28;
 	font-size: 12px;
 	padding: 5px;
 }
@@ -332,7 +328,6 @@ a:after {
 /***** MODAL CONTACT *****/
 .modal-content {
 	border-radius: 0px;
-
 }
 
 .modal-header {
@@ -346,219 +341,222 @@ a:after {
 
 .modal-body {
 	background: #f2f2f2;
-    font-family: "Lato";
-    font-weight: 300;
-    font-size: 16px;
-    color: #555;
+	font-family: "Lato";
+	font-weight: 300;
+	font-size: 16px;
+	color: #555;
 }
 
 .modal-footer {
 	background: #f2f2f2;
-	margin-top: 0px; 
+	margin-top: 0px;
 }
 
 /* ==========================================================================
    Pricing Tables
    ========================================================================== */
-   
+
 .pricing-option {
-    padding-bottom: 40px;
+	padding-bottom: 40px;
 }
 
 .pricing-option .pricing-top {
-    position: relative;
-    background: #222;
-    color: white;
-    text-align: center;
-    font-weight: bold;
+	position: relative;
+	background: #222;
+	color: white;
+	text-align: center;
+	font-weight: bold;
 
-    padding: 40px 20px 30px 20px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+	padding: 40px 20px 30px 20px;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .pricing-option .pricing-top .special-label {
-    display: block;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #1abc9c;
-    text-transform: uppercase;
-    font-size: 15px;
-    font-weight: bold;
-    padding: 3px 0;
+	display: block;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background: #1abc9c;
+	text-transform: uppercase;
+	font-size: 15px;
+	font-weight: bold;
+	padding: 3px 0;
 }
 
 .special .pricing-top {
-    background: black;
+	background: black;
 }
 
 .pricing-option .pricing-edition {
-    text-transform: uppercase;
-    display: block;
-    font-size: 25px;
-    letter-spacing: 8px;
+	text-transform: uppercase;
+	display: block;
+	font-size: 25px;
+	letter-spacing: 8px;
 }
 
 .pricing-option .price {
-    display: inline-block;
-    position: relative;
+	display: inline-block;
+	position: relative;
 }
 
 .pricing-option .price sup {
-    position: absolute;
-    top: 50px;
-    left: -10px;
-    font-size: 24px;
+	position: absolute;
+	top: 50px;
+	left: -10px;
+	font-size: 24px;
 }
 
 .pricing-option .price .price-amount {
-    font-size: 108px;
-    letter-spacing: -4px;
+	font-size: 108px;
+	letter-spacing: -4px;
 }
 
 .pricing-option .price small {
-    position: relative;
-    left: -10px;
-    font-size: 18px;
+	position: relative;
+	left: -10px;
+	font-size: 18px;
 }
 
 .pricing-option ul {
-    list-style: none;
-    margin: 0;
-    background: #eee;
-    text-align: center;
-    padding-left: 0px;
+	list-style: none;
+	margin: 0;
+	background: #eee;
+	text-align: center;
+	padding-left: 0px;
 }
 
 .pricing-option ul li {
-    border-bottom: solid 1px #e1e1e1;
-    padding-top: 20px;
-    padding-bottom: 20px;
+	border-bottom: solid 1px #e1e1e1;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
 
 .pricing-option .pricing-signup {
-    display: block;
-    text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    padding: 15px 10px;
-    color: white;
-    background: #1abc9c;
+	display: block;
+	text-align: center;
+	font-size: 18px;
+	font-weight: bold;
+	padding: 15px 10px;
+	color: white;
+	background: #1abc9c;
 }
 
 .pricing-option .pricing-signup:hover {
-    background: #006D28;
+	background: #006d28;
 }
-
 
 /* New CSS */
 
-.wrapperDiv{
-    width: 320px;
-    height: 360px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 60px;
-    padding: 1rem;
-    background: #fff;
-    display: flex;
-    align-items: flex-end;
-    position: relative;
-    box-shadow: 1px 2px 5px rgba(0,0,0,0.5);
-    transition: 0.5s ease-in-out;
-    /* transform: scale(1); */
-    cursor: pointer;
-    overflow: hidden;
+.wrapperDiv {
+	width: 320px;
+	height: 360px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 60px;
+	padding: 1rem;
+	background: #fff;
+	display: flex;
+	align-items: flex-end;
+	position: relative;
+	box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.5);
+	transition: 0.5s ease-in-out;
+	/* transform: scale(1); */
+	cursor: pointer;
+	overflow: hidden;
 }
 
-.wrapperDiv::before{
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    /* background: linear-gradient(to bottom, rgba(4, 155, 24, 1), rgba(3, 71, 12, 1)); */
-    background: rgb(5, 131, 72);
-    mix-blend-mode: overlay;
-    z-index:2;
-    transition: 0.5s all;
-    opacity: 1;
+.wrapperDiv::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	/* background: linear-gradient(to bottom, rgba(4, 155, 24, 1), rgba(3, 71, 12, 1)); */
+	background: rgb(5, 131, 72);
+	mix-blend-mode: overlay;
+	z-index: 2;
+	transition: 0.5s all;
+	opacity: 1;
 }
 
-.wrapperDiv .linkIcon{
-    z-index: 4;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 50px;
-    height: 50px;
-    opacity: 0;
+.wrapperDiv .linkIcon {
+	z-index: 4;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 50px;
+	height: 50px;
+	opacity: 0;
 }
 
-.wrapperDiv img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: absolute;
-    top:0;
-    left:0;
-    transition: 0.5s all;
+.wrapperDiv img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: 0.5s all;
 }
 
-.wrapperDiv div{
-    font-family: "Raleway";
-    font-weight: 700;
-    font-size: 16px;
-    width: 100%;
-    height: 40px;
-    position: absolute;
-    bottom:0;
-    left:0;
-    color: #333;
-    background-color: rgb(238, 195, 86);
-    /* background-color: rgba(255, 255, 255, 0.8); */
-    text-align: center;
-    padding: 1rem;
-    z-index: 3;
-    align-items: top;    
-    /* transform: translateY(0); */
-    transition: 0.5s all;
+.wrapperDiv div {
+	font-family: "Raleway";
+	font-weight: 700;
+	font-size: 16px;
+	width: 100%;
+	height: 40px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	color: #333;
+	background-color: rgb(238, 195, 86);
+	/* background-color: rgba(255, 255, 255, 0.8); */
+	text-align: center;
+	padding: 1rem;
+	z-index: 3;
+	align-items: top;
+	/* transform: translateY(0); */
+	transition: 0.5s all;
 }
 
 .wrapperDiv:hover {
-    /* transform: scale(1.02); */
-    transform: translateY(-2%);
-    box-shadow: 1px 7px 7px rgba(0,0,0,0.4);
+	/* transform: scale(1.02); */
+	transform: translateY(-2%);
+	box-shadow: 1px 7px 7px rgba(0, 0, 0, 0.4);
 }
 
 .wrapperDiv:hover::before {
-    opacity: 0;
+	opacity: 0;
 }
 
 .wrapperDiv:hover div {
-    /* transform: translateY(-20px); */
-    background-color: yellow;
-    color: #000;
-    height: 62px;
-    padding: 2rem 1rem;
+	/* transform: translateY(-20px); */
+	background-color: yellow;
+	color: #000;
+	height: 62px;
+	padding: 2rem 1rem;
 }
 
 .wrapperDiv:hover img {
-    /* transform: translateY(-20px); */
-    transform: scale(1.05);
+	/* transform: translateY(-20px); */
+	transform: scale(1.05);
 }
 
 .wrapperDiv:hover .linkIcon {
-    opacity: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+	opacity: 1;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
+.btn {
+	margin-right: 10px;
+}
 
+/* accordian styles */
