--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -560,3 +560,119 @@ hr {
 }
 
 /* accordian styles */
+
+.accordionbox {
+	max-width: 95%;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.accordionbox .contentbox {
+	position: relative;
+	margin: 10px 20px;
+}
+
+.accordionbox .contentbox .labeldiv {
+	position: relative;
+	padding: 10px;
+	background-color: #17a16c;
+	color: white;
+	font-weight: 400;
+	text-align: left;
+	cursor: pointer;
+}
+
+.accordionbox .contentbox .labeldiv:before {
+	content: "▼";
+	position: absolute;
+	top: 50%;
+	right: 20px;
+	transform: translateY(-50%);
+	font-size: 1.5rem;
+}
+
+.accordionbox .contentbox.active .labeldiv:before {
+	content: "▲";
+}
+
+.accordionbox .contentbox .contentdiv {
+	position: relative;
+	background: #fff;
+	display: none;
+	overflow: hidden;
+	transform: 0.5s ease-in-out;
+	overflow-y: auto;
+}
+
+.accordionbox .contentbox.active .contentdiv {
+	display: block;
+	padding: 10px;
+}
+
+.accordionbox .contentbox .contentdiv table {
+	width: 100%;
+}
+
+/* green accordion  */
+
+.accordion {
+	max-width: 90%;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
+	overflow: hidden;
+	font-family: "Quicksand", sans-serif;
+	background: #009578;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.accordion__label,
+.accordion__content {
+	padding: 14px 20px;
+}
+
+.accordion__label {
+	display: block;
+	color: #ffffff;
+	font-weight: 500;
+	cursor: pointer;
+	position: relative;
+	transition: background 0.1s;
+}
+
+.accordion__label:hover {
+	background: rgba(0, 0, 0, 0.1);
+}
+
+.accordion__label::after {
+	content: "";
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	right: 20px;
+	width: 12px;
+	height: 6px;
+	background-image: url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 100,0 50,50" style="fill:%23FFFFFF99;" /></svg>');
+	background-size: contain;
+	transition: transform 0.4s;
+}
+
+.accordion__content {
+	background: #ffffff;
+	line-height: 1.6;
+	font-size: 0.85em;
+	display: none;
+}
+
+.accordion__input {
+	display: none;
+}
+
+.accordion__input:checked ~ .accordion__content {
+	display: block;
+	transition: 0.5s ease-in-out;
+}
+
+.accordion__input:checked ~ .accordion__label::after {
+	transform: translateY(-50%) rotate(0.5turn);
+}
