--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,12 +1,3 @@
-/*
- * Author: Carlos Alvarez
- * URL: http://alvarez.is
- *
- * Project Name: SPOT - Free Bootstrap 3 Theme
- * Version: 1.0
- * URL: http://blacktie.co
- */
-
 /* FONTS */
 @import url("http://fonts.googleapis.com/css?family=Roboto:300,400,700,900");
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap'); */
@@ -256,18 +247,30 @@ hr {
 /* Blue Wrap */
 
 #blue {
-	background: #3498db;
+	/* background: #3498db; */
+	background: rgb(5, 131, 72);
 	padding-top: 35px;
 	padding-bottom: 35px;
 }
 
-#blue h4 {
+#blue h2 {
 	color: white;
 	font-weight: 700;
 }
 
 #blue p {
 	color: white;
+}
+
+#blue a {
+	padding: 10px 14px;
+	background: white;
+	font-weight: 700;
+	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+#blue a > img {
+	margin-right: 10px;
 }
 
 /* Footer Wrap */
@@ -607,10 +610,49 @@ hr {
 .accordionbox .contentbox.active .contentdiv {
 	display: block;
 	padding: 10px;
+	margin-bottom: 20px;
 }
 
 .accordionbox .contentbox .contentdiv table {
 	width: 100%;
+	text-align: left;
+	border: 1px solid yellowgreen;
+	margin-bottom: 10px;
+}
+
+.accordionbox .contentbox .contentdiv tr.productrow {
+	background-color: white;
+}
+
+.accordionbox .contentbox .contentdiv tr.productrow:hover {
+	background-color: yellowgreen;
+	color: white;
+}
+
+.accordionbox .contentbox .contentdiv th {
+	background-color: yellow;
+	padding: 5px 10px;
+	border-right: 1px solid lightgray;
+}
+
+.accordionbox .contentbox .contentdiv th:last-child {
+	border-right: none;
+}
+
+.accordionbox .contentbox .contentdiv td {
+	background-color: none;
+	padding: 10px;
+	font-weight: 400;
+	border-right: 1px solid lightgray;
+	border-bottom: 1px solid lightgray;
+}
+
+.accordionbox .contentbox .contentdiv td:last-child {
+	border-right: none;
+}
+
+.accordionbox .contentbox .contentdiv td:first-child {
+	font-weight: bold;
 }
 
 /* green accordion  */
@@ -675,4 +717,53 @@ hr {
 
 .accordion__input:checked ~ .accordion__label::after {
 	transform: translateY(-50%) rotate(0.5turn);
+}
+
+.pdficon {
+	background: url("../img/pdf.svg") no-repeat center top;
+	width: 20px;
+	height: 20px;
+	line-height: 20px;
+}
+
+.offices,
+.officers {
+	/* background: #3498db; */
+	background: rgb(5, 131, 72);
+	color: rgb(132, 207, 163);
+	font-size: 18px;
+	font-weight: 700;
+	padding: 10px;
+	margin: auto 5px;
+}
+
+.officedetail {
+	background: rgb(235, 235, 235);
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-bottom: 5px;
+}
+
+.officers {
+	margin-bottom: 20px;
+}
+
+.officers > span {
+	margin-right: 10px;
+	padding-left: 5px;
+	padding-right: 5px;
+	background: white;
+	color: rgb(5, 131, 72);
+}
+
+.contactbtn {
+	background-color: rgb(240, 240, 240);
+	color: rgb(5, 131, 72);
+	padding-left: 5px;
+	padding-right: 5px;
+	font-weight: bold;
+}
+
+.contactbtn:hover {
+	box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
